--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="email" name="useremail" placeholder="Email Address" style="width: 95%; height:30px" required><br><br>
             <input type="password" name="userpassw" placeholder="Password" style="width: 95%; height:30px" required><br><br>
             <button class="fifth"><p>CLAIM YOUR FREE TRAIL</p> </button><br><br>
-            <P class="six">By clicking the button, you are agreeing to our <span style="color:red ;">Terms and Services</span></p>
+            <P class="six">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
         </form>
     </div>
     
